Fix text-align for phone screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -289,6 +289,7 @@ xmp{
     }
     xmp{
         font-size: 0.8rem;
+        text-align: left
     }
 
 };
